--- a/portfolio.html
+++ b/portfolio.html
@@ -277,6 +277,17 @@
 						</li>
 					</ul>
 				</section>
+				<section class="footer-subscription">
+					<h2 class="subscription-title">Подпишитесь на рассылку</h2>
+					<div class="subscription-contact">
+						<input class="subscription-input" for="input" placeholder="E-mail"></input>
+						<button type="button" class="subscription-btn">Подписаться
+							<svg class="subscription-icon">
+								<use href="./images/icons.svg#send"></use>
+							</svg>
+						</button>
+					</div>
+				</section>
 			</div>
 		</footer>
 	</body>
