--- a/index.html
+++ b/index.html
@@ -57,11 +57,25 @@
 				<div class="container">
 					<h1 class="herro-title">Эффективные решения для вашего бизнеса</h1>
 					<button type="button" class="herro-bth" data-modal-open >Заказать услугу</button>
-					<div  class="backdrop is-hidden" data-modal>
-						<p class="modal"><span>modal window</span>
+					<div  class="backdrop is-hidden modal" data-modal>
+						<h2 class="title-modal"> Оставьте свои данные, мы вам перезвоним
+						<form action="" name="signum-form" autocomplete="on" class="form-input">
+							<label for="" class="">Имя
+								<input type="email" name="email">
+							</label>
+							<label for="">Телефон
+								<input type="email" name="email">
+							</label>
+							<label for="">E-mail
+								<input type="email" name="email">
+							</label>
+							<label for="">Коментарий
+								<input type="email" name="email">
+							</label>
+						</form>	
 						<button class="close" data-modal-close ><svg width="18" height="18" class="svg-close" >
 								<use href="./images/icons.svg#close"></use>
-							</svg></button></p>
+							</svg></button></h2>
 					</div>
 				</div>
 			</section>
@@ -326,7 +340,7 @@
 				<section class="footer-subscription">
 					<h2 class="subscription-title">Подпишитесь на рассылку</h2>
 					<div class="subscription-contact">
-						<input class="subscription-input" for="input" placeholder="E-mail"></input>
+						<input type="email" name="email" class="subscription-input" for="input" placeholder="E-mail" required pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2, 4}$"></input>
 						<button type="button" class="subscription-btn">Подписаться
 							<svg class="subscription-icon">
 								<use href="./images/icons.svg#send"></use>
