--- a/index.html
+++ b/index.html
@@ -57,25 +57,44 @@
 				<div class="container">
 					<h1 class="herro-title">Эффективные решения для вашего бизнеса</h1>
 					<button type="button" class="herro-bth" data-modal-open >Заказать услугу</button>
-					<div  class="backdrop is-hidden modal" data-modal>
-						<h2 class="title-modal"> Оставьте свои данные, мы вам перезвоним
+					<div  class="backdrop is-hidden modal" data-modal> 
+						<h2 class="title-modal"> Оставьте свои данные, мы вам перезвоним</h2>
 						<form action="" name="signum-form" autocomplete="on" class="form-input">
-							<label for="" class="">Имя
-								<input type="email" name="email">
+							<label class="name-input">Имя
+								<div class="username">
+									<input type="text" name="username" class="form-input-area" >
+									<svg width="18" height="18" class="modal-icon">
+									<use href="./images/icons.svg#person-black"></use>
+								</svg>
+								</label>
+								</div>
+							<label class="name-input">Телефон
+								<div class="username">
+								<input type="tel" name="tel" class="form-input-area" title="+38(000)111 11 11">
+							<svg width="18" height="18" class="modal-icon">
+								<use href="./images/icons.svg#phone-black"></use>
+							</svg>
+							</div>
 							</label>
-							<label for="">Телефон
-								<input type="email" name="email">
+							<label for="" class="name-input">E-mail
+								<div class="username">
+								<input type="email" name="email" class="form-input-area" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2, 4}$">
+							<svg width="18" height="18" class="modal-icon">
+								<use href="./images/icons.svg#email-black"></use>
+							</svg>
+							</div>
 							</label>
-							<label for="">E-mail
-								<input type="email" name="email">
-							</label>
-							<label for="">Коментарий
-								<input type="email" name="email">
+							<label class="name-input">Коментарий
+								<textarea name="feedback" rows="5" class="form-input-area feedback" placeholder="Введите текст">
+								</textarea>
 							</label>
 						</form>	
-						<button class="close" data-modal-close ><svg width="18" height="18" class="svg-close" >
+						<input type="checkbox" class="custom-checkbox" id="checkbox" name="checkbox">
+						<label for="checkbox" class="checkbox-accept">Соглашаюсь с рассылкой и принимаю <span class="link-dogovor">&nbsp;Условия договора</span></label>
+
+							<button class="close" data-modal-close ><svg width="18" height="18" class="svg-close" >
 								<use href="./images/icons.svg#close"></use>
-							</svg></button></h2>
+							</svg></button>
 					</div>
 				</div>
 			</section>
