--- a/index.html
+++ b/index.html
@@ -89,9 +89,12 @@
 								</textarea>
 							</label>
 						</form>	
-						<input type="checkbox" class="custom-checkbox" id="checkbox" name="checkbox">
-						<label for="checkbox" class="checkbox-accept">Соглашаюсь с рассылкой и принимаю <span class="link-dogovor">&nbsp;Условия договора</span></label>
-
+						<div class="modal-checkbox">
+							<input type="checkbox" class="custom-checkbox" id="checkbox" name="checkbox">
+							<label for="checkbox" class="checkbox-accept"></label>
+							<p>Соглашаюсь с рассылкой и принимаю <span class="link-dogovor">&nbsp;Условия договора</span></p>
+						</div>
+						<button type="button" class="modal-send-btn">отправить</button>
 							<button class="close" data-modal-close ><svg width="18" height="18" class="svg-close" >
 								<use href="./images/icons.svg#close"></use>
 							</svg></button>
