--- a/index.html
+++ b/index.html
@@ -57,47 +57,50 @@
 				<div class="container">
 					<h1 class="herro-title">Эффективные решения для вашего бизнеса</h1>
 					<button type="button" class="herro-bth" data-modal-open >Заказать услугу</button>
-					<div  class="backdrop is-hidden modal" data-modal> 
-						<h2 class="title-modal"> Оставьте свои данные, мы вам перезвоним</h2>
-						<form action="" name="signum-form" autocomplete="on" class="form-input">
-							<label class="name-input">Имя
-								<div class="username">
-									<input type="text" name="username" class="form-input-area" >
+					<div class="backdrop" data-modal>
+						<div  class="is-hidden modal" > 
+							<h2 class="title-modal"> Оставьте свои данные, мы вам перезвоним</h2>
+							<form action="" name="signum-form" autocomplete="on" class="form-input">
+								<label class="name-input">Имя
+									<div class="username">
+										<input type="text" name="username" class="form-input-area" placeholder="введите ваше имя">
+										<svg width="18" height="18" class="modal-icon">
+										<use href="./images/icons.svg#person-black"></use>
+										</svg>
+									</div>
+									</label>
+									
+								<label class="name-input">Телефон
+									<div class="username">
+									<input type="tel" name="tel" class="form-input-area" title="+38(000)111 11 11" placeholder="введите номер телефона">
 									<svg width="18" height="18" class="modal-icon">
-									<use href="./images/icons.svg#person-black"></use>
-								</svg>
-								</label>
+									<use href="./images/icons.svg#phone-black"></use>
+									</svg>
 								</div>
-							<label class="name-input">Телефон
-								<div class="username">
-								<input type="tel" name="tel" class="form-input-area" title="+38(000)111 11 11">
-							<svg width="18" height="18" class="modal-icon">
-								<use href="./images/icons.svg#phone-black"></use>
-							</svg>
+								</label>
+								<label for="" class="name-input">E-mail
+									<div class="username">
+									<input type="email" name="email" class="form-input-area" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2, 4}$" placeholder="введите E-mail">
+								<svg width="18" height="18" class="modal-icon">
+									<use href="./images/icons.svg#email-black"></use>
+								</svg>
+								</div>
+								</label>
+								<label class="name-input">Коментарий
+									<textarea name="feedback" rows="5" class="form-input-area feedback">
+									</textarea>
+								</label>
+							</form>	
+							<div class="modal-checkbox">
+								<input type="checkbox" class="custom-checkbox" id="checkbox" name="checkbox">
+								<label for="checkbox" class="checkbox-accept"></label>
+								<p class="checkbox-accept">Соглашаюсь с рассылкой и принимаю <span class="link-dogovor">&nbsp;Условия договора</span></p>
 							</div>
-							</label>
-							<label for="" class="name-input">E-mail
-								<div class="username">
-								<input type="email" name="email" class="form-input-area" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2, 4}$">
-							<svg width="18" height="18" class="modal-icon">
-								<use href="./images/icons.svg#email-black"></use>
-							</svg>
-							</div>
-							</label>
-							<label class="name-input">Коментарий
-								<textarea name="feedback" rows="5" class="form-input-area feedback" placeholder="Введите текст">
-								</textarea>
-							</label>
-						</form>	
-						<div class="modal-checkbox">
-							<input type="checkbox" class="custom-checkbox" id="checkbox" name="checkbox">
-							<label for="checkbox" class="checkbox-accept"></label>
-							<p class="checkbox-accept">Соглашаюсь с рассылкой и принимаю <span class="link-dogovor">&nbsp;Условия договора</span></p>
+							<button type="button" class="modal-send-btn">отправить</button>
+								<button class="close" data-modal-close ><svg width="18" height="18" class="svg-close" >
+									<use href="./images/icons.svg#close"></use>
+								</svg></button>
 						</div>
-						<button type="button" class="modal-send-btn">отправить</button>
-							<button class="close" data-modal-close ><svg width="18" height="18" class="svg-close" >
-								<use href="./images/icons.svg#close"></use>
-							</svg></button>
 					</div>
 				</div>
 			</section>
