--- a/index.html
+++ b/index.html
@@ -87,8 +87,8 @@
 								</div>
 								</label>
 								<label class="name-input">Коментарий
-									<textarea name="feedback" rows="5" class="form-input-area feedback">
-									</textarea>
+									<textarea placeholder="Введите текст" rows="5" class="form-input-area feedback"></textarea>
+
 								</label>
 							</form>	
 							<div class="modal-checkbox">
