--- a/portfolio.html
+++ b/portfolio.html
@@ -280,7 +280,7 @@
 				<section class="footer-subscription">
 					<h2 class="subscription-title">Подпишитесь на рассылку</h2>
 					<div class="subscription-contact">
-						<input type="email" name="email" class="subscription-input" for="input" placeholder="E-mail" required pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2, 4}$"></input>
+						<input type="email" name="email" class="subscription-input" for="input" placeholder="E-mail" required pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2, 4}$">
 						<button type="button" class="subscription-btn">Подписаться
 							<svg class="subscription-icon">
 								<use href="./images/icons.svg#send"></use>
